@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               PDF-Burst
-version:            1.16
+version:            1.17
 abstract:           ~
 author:  []
 license:            perl
@@ -8,17 +8,16 @@ distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    CAM::PDF:          1.52
-    Carp:              1
-    Cwd:               3
-    Exporter:          5
-    File::Copy:        2.09
-    File::Which:       0.05
-    LEOCHARRE::CLI:    1.19
-    LEOCHARRE::DEBUG:  1.13
-    LEOCHARRE::Dir:    1.07
-    PDF::API2:         2.015
-    Test::Simple:      0
+    CAM::PDF:        1.52
+    Carp:            1
+    Cwd:             3
+    Exporter:        5
+    File::Copy:      2.09
+    File::Which:     0.05
+    LEOCHARRE::CLI:  1.19
+    LEOCHARRE::Dir:  1.07
+    PDF::API2:       2.015
+    Test::Simple:    0
 no_index:
     directory:
         - t
